# fast-text-censor

./: .gitignore  Cargo.toml  README.md  censor.js  example.js  index.d.ts  lib.d.ts  lib.js  package-lock.json  package.json
.github/workflows/: CI.yml
list/: en.txt  es.txt  id.txt  it.txt  ja.txt  pl.txt  pt.txt  ru.txt  sv.txt  th.txt  zh.txt
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
x86_64-apple-darwin/: index.js
