[package]
name = "fast-text-censor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.7", default-features = false, features = ["napi4"] }
napi-derive = "2.16.4"
aho-corasick = "1.1.3"
regex = "1.12.4"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
